# seqledger

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  environment.yml  odna.py  pyproject.toml  requirements.txt  schema.sql  seqledger.py
app/: streamlit_app.py
odna/: __init__.py  checksums.py  db.py  gui.py  ingest.py  integrity.py  query.py  rclone.py  taxonomy.py  validate.py
seqledger/: __main__.py  checksums.py  cli.py  db.py  gui.py  ingest.py  integrity.py  mitopilot.py  rclone.py  schema.sql  taxonomy.py  validate.py  worms.py
seqledger/app/: streamlit_app.py
tests/: conftest.py  helpers.py  test_checksums.py  test_config.py  test_db.py  test_gui_app.py  test_gui_cli.py  test_ingest.py  test_ingest_pipeline.py  test_ingest_tree.py  test_integrity.py  test_mitopilot.py  test_onboard.py  test_rclone.py  test_taxonomy.py  test_validate.py  test_validate_catalog.py  test_worms.py
